# C_projects

./: CMakeLists.txt
1homework/: palindrome.c  palindrome.h  pi_calculation.c  pi_calculation.h  prime.c  prime.h  vigenere.c  vigenere.h
2homework/: doubly_linked_list.c  doubly_linked_list.h  scheduler.h  scheduler_fcfs.c  scheduler_fcfs.h  scheduler_round_robin.c  scheduler_round_robin.h
