cmake_minimum_required(VERSION 3.28)
project(bus1homework)

set(CMAKE_CXX_STANDARD 17)

add_executable(bus1homework
        1homework/prime.c
        1homework/prime.h
        1homework/pi_calculation.c
        1homework/pi_calculation.h
        1homework/vigenere.c
        1homework/vigenere.h
        1homework/palindrome.c
        1homework/palindrome.h
        1homework/prime.c
        1homework/prime.h
        1homework/pi_calculation.c
        1homework/pi_calculation.h
        1homework/vigenere.c
        1homework/vigenere.h
        1homework/palindrome.c
        1homework/palindrome.h
        2homework/doubly_linked_list.c
        2homework/doubly_linked_list.h
        2homework/scheduler.h
        2homework/scheduler_fcfs.c
        2homework/scheduler_fcfs.h
        2homework/scheduler_round_robin.c
        2homework/scheduler_round_robin.h
)
